Classpath and class loaders commit